Fix button not visible issue

--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,7 @@
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+    box-sizing:border-box;
 }
 
 .sidenav a {
